fixed jump link bug by setting heights to tl-content instead of tl-img

--- a/history.scss
+++ b/history.scss
@@ -126,7 +126,6 @@ header.decade {
         border-left: 1px solid #999;
         width: 100%;
 
-
         .tl-text {
             display: flex;
             flex-direction: column;
@@ -145,7 +144,7 @@ header.decade {
         .tl-img {
             flex: 0 1 auto;
             width: 100%;
-            height: 400px;
+            height: auto;
             display: flex;
 
             figure {
@@ -154,7 +153,7 @@ header.decade {
                 padding: 10px;
                 flex-direction: column;
                 width: 100%;
-                height: 100%;
+                height: 300px;
                 position: relative;
             }
 
@@ -166,10 +165,10 @@ header.decade {
             
             figcaption {
                 color: #333;
-                font-size: .9em;
+                font-size: .75em;
                 padding: 10px;
                 position: absolute;
-                bottom: 0;
+                bottom: -8%;
                 left: 0;
                 background: inherit;
                 width: 100%;
@@ -201,6 +200,29 @@ header.decade {
     #dpu-timeline {
         font-size: 1.2rem;
     }
+    .tl-card {
+        .tl-content {
+            flex-direction: row;
+            height: 600px;
+    
+            &:has(img[src=""]){
+                height: auto;
+            }
+    
+            .tl-text {
+                flex: 1 0 50%;
+            }
+    
+            .tl-img {
+                max-height: 500px; //to ensure captions do not overflow keep shorter than tl-content 
+    
+                figure {
+                    // object-fit: contain;
+                    height: auto;
+                }
+            }
+        }
+    }
 }
 
 /* Tablet landscape styles */
@@ -208,27 +230,6 @@ header.decade {
     #dpu-timeline {
         font-size: 20px;
     }
-
-
-        .tl-card {
-            .tl-content {
-                flex-direction: row;
-
-                .tl-text {
-                    flex: 1 0 50%;
-                }
-
-                .tl-img {
-                    height: 500px;
-
-                    figure,
-                    img {
-                        // object-fit: contain;
-                    }
-                }
-            }
-        }
-
 }
 
 /* Small laptop styles */
